Migrate file messages to NIO.2
  - Fix unclosed file input streams